--- a/packages/app_center/pubspec.yaml
+++ b/packages/app_center/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   handy_window: ^0.3.1
   intl: ^0.18.1
   jwt_decode: ^0.3.1
+  media_kit: ^1.1.10+1
+  media_kit_video: ^1.2.4
   meta: ^1.9.1
   package_info_plus: ^4.2.0
   packagekit: ^0.2.6
